--- a/assets/style.css
+++ b/assets/style.css
@@ -113,6 +113,17 @@ body {
     left: 50%; width: 1px; margin-left: -0.5px;
 }
 
+.line{
+width: 40%;
+height: 47px;
+border-bottom: .2px solid grey;
+position: relative;
+margin-left: auto;
+margin-right: auto;
+margin-top: 10%;
+margin-bottom: -12%;
+}
+
 /* table of contents */
 .link-to-section {
   font-size: 1em;
@@ -153,6 +164,7 @@ body {
   .title_page{
     padding: 20%;
     font-size: 5em;
+    /* margin-left: -5%; */
 }
 
 .section {
@@ -409,7 +421,7 @@ body {
 
 .title{
   padding-top: 5%;
-  padding-left: 5%;
+  /* padding-left: 5%; */
 
 }
 
