--- a/assets/style.css
+++ b/assets/style.css
@@ -119,8 +119,8 @@ border-bottom: .2px solid grey;
 position: relative;
 margin-left: auto;
 margin-right: auto;
-margin-top: 10%;
-margin-bottom: -12%;
+margin-top: 15%;
+/* margin-bottom: -15%; */
 }
 
 /* table of contents */
@@ -383,7 +383,10 @@ margin-bottom: -12%;
 }
 
 .chile_text{
-  padding: 5%;
+  /* padding: 5%; */
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
   white-space: pre-wrap;
 }
 
@@ -396,8 +399,45 @@ margin-bottom: -12%;
 
 .title{
   padding-top: 5%;
+  font-weight: 400;
   /* padding-left: 5%; */
+}
 
+.title1{
+  position: absolute;
+  /* margin-left: 15%; */
+  padding-top: -5%;
+  /* padding-left: 15%; */
+  font-weight: 400;
+  /* padding-left: 5%; */
+}
+
+.religious_group_title{
+  position: absolute;
+margin-left: 20%;
+margin-top: -10%;
+}
+
+.ethnic_group_title{
+margin-left: 61%;
+margin-top: -10%;
+}
+
+.ethnic_group{
+  position: absolute;
+
+  margin-left: 60%;
+  margin-top: 5%;
+}
+
+.religion_grid{
+  position: absolute;
+  margin-top: 5%;
+  margin-left: 15%;
+}
+
+h2{
+  font-weight: 400;
 }
 
 img{
@@ -431,6 +471,412 @@ img{
     margin-top: -1.2%;
 }
 
+/* html {
+  padding: 24px 36px;
+}
+
+
+.vcent {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 200px;
+  width: 445px;
+  margin: auto;
+  font-size: 0;
+}
+.vcent span {
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  margin: 0 -25px -25px 0;
+}
+.vcent span:after {
+  content: " ";
+  position: absolute;
+  top: 17px;
+  left: 17px;
+  height: 24px;
+  width: 24px;
+  background: black;
+}
+
+.vcent{
+ color: blue;
+}
+.vcent span:hover:after{
+  border-radius: 50%;
+} */
+
+.item {
+  background-size: cover;
+  background-position: center center;
+  background-color: #D3EE59;
+  /* border-radius: 20%; */
+}
+
+.item2 {
+  background-size: cover;
+  background-position: center center;
+  background-color: #A9BD56;
+  /* border-radius: 20%; */
+}
+
+.item3 {
+  background-size: cover;
+  background-position: center center;
+  background-color: #404A18;
+  /* border-radius: 20%; */
+}
+
+.item4 {
+  background-size: cover;
+  background-position: center center;
+  background-color: black;
+  /* border-radius: 20%; */
+}
+
+.ethnic_item {
+  background-size: cover;
+  background-position: center center;
+  background-color: #DCE8AA;
+  /* border-radius: 20%; */
+}
+
+.ethnic_item2 {
+  background-size: cover;
+  background-position: center center;
+  background-color: #69733D;
+  /* border-radius: 20%; */
+}
+
+.ethnic_item3 {
+  background-size: cover;
+  background-position: center center;
+  background-color: #101305;
+  /* border-radius: 20%; */
+}
+/*
+.ethnic_item4 {
+  background-size: cover;
+  background-position: center center;
+  background-color: gray;
+  border-radius: 20%;
+} */
+
+/* body {
+  font-family: Noto Sans, Arial, sans-serif;
+  padding: 3em 0;
+  margin: 0;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+} */
+
+SquareGrid {
+  --content-width: 15vw;
+  --gutter: 5px;
+  --columns: 1;
+  --row-size: calc(
+    ( var(--content-width) - (var(--gutter) * (var(--columns) - 1))
+    ) / var(--columns)
+  );
+  display: grid;
+  width: 100%;
+  max-width: var(--content-width);
+  grid-template-columns: repeat(var(--columns), 1fr);
+  grid-auto-rows: var(--row-size);
+  grid-column-gap: var(--gutter);
+  grid-row-gap: var(--gutter);
+}
+
+@media (min-width: 1200px) {
+  SquareGrid {
+    --columns: 10;
+  }
+}
+
+.first{
+  position: absolute;
+  margin-left: 15%;
+}
+
+.first:hover{
+  opacity: 30%;
+}
+
+.global_map{
+  transform: scale(.4);
+  margin-top: -30%;
+  margin-left: -25%;
+
+}
+
+
+.second_grid{
+  /* display: inline-block; */
+  position: absolute;
+  /* margin-left: 24.2%; */
+  /* margin-top: 1.8%; */
+  margin-left: 15%;
+}
+
+.second_grid:hover{
+  /* z-index: 9999; */
+  opacity: 30%;
+}
+
+.third_grid{
+  position: absolute;
+  margin-top: 3%;
+  margin-left: 15%;
+}
+
+.third_grid:hover{
+  z-index: 99999;
+  opacity:30%;
+}
+
+.fourth_grid{
+  position: absolute;
+  margin-top: 5%;
+  margin-left: 15%;
+}
+
+.fourth_grid:hover{
+  z-index: 99999;
+  opacity:30%;
+}
+
+.ethnic_first {
+  margin-left: 50%;
+}
+
+.ethnic_first:hover{
+  opacity: 30%;
+}
+
+.ethnic_second_grid{
+  /* display: inline-block; */
+  position: absolute;
+  margin-left: 50%;
+  margin-top: -1.5%;
+}
+
+.ethnic_second_grid:hover{
+  /* z-index: 9999; */
+  opacity: 30%;
+}
+
+.ethnic_third_grid{
+  position: absolute;
+  margin-left: 50%;
+  margin-top: 3%;
+}
+
+.ethnic_third_grid:hover{
+  z-index: 99999;
+  opacity:30%;
+}
+
+.ethnic_fourth_grid{
+  position: absolute;
+  margin-left: 50%;
+  margin-top: 5%;
+}
+
+.ethnic_fourth_grid:hover{
+  z-index: 99999;
+  opacity:30%;
+}
+
+
+.main-title{
+  color: #2d2d2d;
+  text-align: center;
+  text-transform: capitalize;
+  padding: 0.7em 0;
+}
+
+.container{
+  /* padding: 1em 0; */
+  /* float: left; */
+  /* width: 50%; */
+}
+/* @media screen and (max-width: 640px){
+  .container{
+    display: block;
+    width: 100%;
+  }
+} */
+
+@media screen and (min-width: 900px){
+  .container{
+    width: 40%;
+  }
+}
+
+.container .title{
+  color: black;
+  /* text-align: center; */
+  margin-bottom: 10px;
+  /* width: 33.333%; */
+}
+
+.container2 .title{
+  color: black;
+  /* text-align: center; */
+  margin-bottom: 10px;
+  /* width: 33.333%; */
+}
+
+.content {
+  position: relative;
+  /* width: 100%; */
+  /* max-width: 400px; */
+  /* margin: auto; */
+  /* overflow: hidden; */
+}
+
+.content2 {
+  position: relative;
+  /* width: 100%; */
+  /* max-width: 400px; */
+  /* margin: auto; */
+  /* overflow: hidden; */
+}
+
+.content .content-overlay {
+  background: rgba(255,255,255, 0.5);
+  position: absolute;
+  /* height: 99%; */
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  /* -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s; */
+  transition: all 0.4s ease-in-out 0s;
+}
+.content2 .content-overlay {
+  background: rgba(255,255,255, 0.5);
+  position: absolute;
+  /* height: 99%; */
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  /* -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s; */
+  transition: all 0.4s ease-in-out 0s;
+}
+
+.content:hover .content-overlay{
+  opacity: 1;
+}
+.content2:hover .content-overlay2{
+  opacity: 1;
+}
+
+.content-image{
+  /* width: 150%; */
+}
+
+.content-details {
+  position: absolute;
+  /* text-align: center; */
+  /* padding-left: -5em; */
+  /* padding-right: 1em; */
+  width: 100%;
+  top: 50%;
+  left: -50%;
+  margin-left: 140%;
+  margin-top: 18%;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  /* -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s; */
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.content-details2 {
+  position: absolute;
+  /* text-align: center; */
+  /* padding-left: -5em; */
+  /* padding-right: 1em; */
+  width: 100%;
+  top: 50%;
+  left: -50%;
+  margin-left: 25%;
+  margin-top: 15%;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  /* -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s; */
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.content:hover .content-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.content-details h3{
+  color: black;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+.content-details p{
+  color: black;
+  font-size: 0.8em;
+}
+
+
+.content2:hover .content-details2{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+.content-details2 h3{
+  color: black;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+  /* margin-top: -15%; */
+}
+
+.content-details2 p{
+  color: black;
+  font-size: 0.8em;
+}
+
+
+.fadeIn-left{
+  left: 20%;
+}
+
+
 /* ethnic groups */
 .ethnic:hover{
   opacity: 30%;
@@ -451,8 +897,8 @@ img{
 }
 
 .us_chile_title{
-  text-align: left;
-  padding-left: 5%;
+  /* text-align: left; */
+  /* padding-left: 5%; */
   margin-top: 20%;
 }
 
@@ -520,8 +966,8 @@ img{
 /* exports */
 .export_label{
   position: absolute;
-  margin-top: -23%;
-  margin-left: 73%;
+  margin-top: -53%;
+  margin-left: 80%;
   }
   #copper{
     color: #ED1C24;
@@ -537,20 +983,21 @@ img{
   }
   #export_label{
     position: absolute;
-    margin-top: -40%;
+    margin-top: -70%;
     margin-left: 30%;
   }
   .exports{
     position: absolute;
-    margin-top: -32.5%;
-    margin-left: 15.6%;
+    transform: scale(1.1);
+    margin-top: -62.4%;
+    margin-left: 16.2%;
 }
 
 /* imports */
 .import_label{
   position: absolute;
   margin-top: -5%;
-  margin-left: 15%;
+  margin-left: 13%;
   text-align: right;
   }
   #cars{
@@ -567,12 +1014,13 @@ img{
   }
   #import_label{
     position: absolute;
-    margin-top: -40%;
+    margin-top: -70%;
     margin-left: 60%;
   }
   .imports{
-    margin-top: -32.5%;
-    margin-left: 15.6%;
+    transform: scale(1.1);
+    margin-top: -62.4%;
+    margin-left: 16.2%;
 }
 
 /* agricultural products */
@@ -805,4 +1253,164 @@ ul li {
     transition-delay: 200ms;
     opacity: 1;
     transform: translateY(0px) scale(1);
+}
+
+
+
+.image-grid {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  -webkit-box-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+          justify-content: center;
+  max-width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+}
+
+.image-grid__item {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-flex: 0;
+          flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 360px;
+  -webkit-box-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: center;
+          justify-content: center;
+  position: relative;
+  height: 220px;
+  margin-right: 14px;
+  margin-bottom: 14px;
+  -webkit-transition: text-shadow 0.1s ease-in, -webkit-transform 0.14s ease-in;
+  transition: text-shadow 0.1s ease-in, -webkit-transform 0.14s ease-in;
+  transition: transform 0.14s ease-in, text-shadow 0.1s ease-in;
+  transition: transform 0.14s ease-in, text-shadow 0.1s ease-in, -webkit-transform 0.14s ease-in;
+}
+.image-grid__item:before {
+  content: "";
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: none;
+  border-radius: 3px;
+  box-shadow: 0 10px 24px 0px rgba(0, 0, 0, 0.06), 0 8px 20px -2px rgba(0, 0, 0, 0.1), 0 6px 10px -6px rgba(0, 0, 0, 0.2);
+  -webkit-transition: visibility 0.1s ease-out, opacity 0.1s ease-out;
+  transition: visibility 0.1s ease-out, opacity 0.1s ease-out;
+  opacity: 0;
+}
+.image-grid__item:hover:before {
+  visibility: visible;
+  opacity: 1;
+}
+
+.grid-item {
+  display: -webkit-box;
+  display: flex;
+  position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+          flex-grow: 1;
+  flex-shrink: 1;
+  -webkit-box-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: center;
+          justify-content: center;
+  text-decoration: none;
+  color: #eeeeee;
+  overflow: hidden;
+}
+.grid-item:hover .grid-item__image {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+.grid-item:hover .grid-item__hover {
+  visibility: visible;
+  opacity: 1;
+}
+.grid-item:hover .grid-item__name {
+  visibility: visible;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  opacity: 1;
+}
+
+.grid-item__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  will-change: transform;
+  -webkit-transition: -webkit-transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: -webkit-transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  z-index: 0;
+}
+
+.grid-item__hover {
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(rgba(47, 48, 50, 0.2), rgba(47, 48, 50, 0.7));
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.15);
+  border-radius: 0;
+  -webkit-transition: visibility 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: visibility 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  opacity: 0;
+}
+
+.grid-item__name {
+  visibility: hidden;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+          flex-grow: 1;
+  flex-shrink: 1;
+  -webkit-box-align: center;
+          align-items: center;
+  font-size: 2rem;
+  font-weight: 300;
+  text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4), 2px 2px 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-pack: center;
+          justify-content: center;
+  letter-spacing: 1px;
+  -webkit-transform: scale(0.6);
+          transform: scale(0.6);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+  -webkit-transition: visibility 0.14s ease-out, opacity 0.14s ease-out, -webkit-transform 0.24s ease;
+  transition: visibility 0.14s ease-out, opacity 0.14s ease-out, -webkit-transform 0.24s ease;
+  transition: visibility 0.14s ease-out, opacity 0.14s ease-out, transform 0.24s ease;
+  transition: visibility 0.14s ease-out, opacity 0.14s ease-out, transform 0.24s ease, -webkit-transform 0.24s ease;
+  opacity: 0;
 }
