--- a/assets/style.css
+++ b/assets/style.css
@@ -123,6 +123,13 @@ margin-top: 15%;
 /* margin-bottom: -15%; */
 }
 
+
+
+
+
+
+
+
 /* table of contents */
 .link-to-section {
   font-size: 1em;
@@ -141,13 +148,13 @@ margin-top: 15%;
   }
 
   .tableofcontents_head{
-    margin-top: -30%;
-    margin-left: 60%;
+    margin-top: -25%;
+    margin-left: 65%;
     text-decoration: none;
   }
 
   .tableofcontents{
-    padding-top: 15px;
+    padding-top: 20px;
     font-size: 1em;
 }
 
@@ -162,6 +169,7 @@ margin-top: 15%;
   }
   .title_page{
     padding: 20%;
+    /* margin-top: -3%; */
     font-size: 5em;
     /* margin-left: -5%; */
 }
@@ -388,6 +396,7 @@ margin-top: 15%;
   margin-left: auto;
   margin-right: auto;
   white-space: pre-wrap;
+  line-height: 1.5;
 }
 
 .white_break{
@@ -400,16 +409,12 @@ margin-top: 15%;
 .title{
   padding-top: 5%;
   font-weight: 400;
-  /* padding-left: 5%; */
 }
 
 .title1{
   position: absolute;
-  /* margin-left: 15%; */
   padding-top: -5%;
-  /* padding-left: 15%; */
   font-weight: 400;
-  /* padding-left: 5%; */
 }
 
 .religious_group_title{
@@ -419,8 +424,9 @@ margin-top: -10%;
 }
 
 .ethnic_group_title{
+  position: absolute;
 margin-left: 61%;
-margin-top: -10%;
+/* margin-top: -10%; */
 }
 
 .ethnic_group{
@@ -471,117 +477,47 @@ img{
     margin-top: -1.2%;
 }
 
-/* html {
-  padding: 24px 36px;
-}
-
-
-.vcent {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 200px;
-  width: 445px;
-  margin: auto;
-  font-size: 0;
-}
-.vcent span {
-  box-sizing: border-box;
-  position: relative;
-  display: inline-block;
-  height: 60px;
-  width: 60px;
-  margin: 0 -25px -25px 0;
-}
-.vcent span:after {
-  content: " ";
-  position: absolute;
-  top: 17px;
-  left: 17px;
-  height: 24px;
-  width: 24px;
-  background: black;
-}
-
-.vcent{
- color: blue;
-}
-.vcent span:hover:after{
-  border-radius: 50%;
-} */
-
 .item {
   background-size: cover;
   background-position: center center;
   background-color: #D3EE59;
-  /* border-radius: 20%; */
 }
 
 .item2 {
   background-size: cover;
   background-position: center center;
   background-color: #A9BD56;
-  /* border-radius: 20%; */
 }
 
 .item3 {
   background-size: cover;
   background-position: center center;
   background-color: #404A18;
-  /* border-radius: 20%; */
 }
 
 .item4 {
   background-size: cover;
   background-position: center center;
   background-color: black;
-  /* border-radius: 20%; */
 }
 
 .ethnic_item {
   background-size: cover;
   background-position: center center;
   background-color: #DCE8AA;
-  /* border-radius: 20%; */
 }
 
 .ethnic_item2 {
   background-size: cover;
   background-position: center center;
   background-color: #69733D;
-  /* border-radius: 20%; */
 }
 
 .ethnic_item3 {
   background-size: cover;
   background-position: center center;
   background-color: #101305;
-  /* border-radius: 20%; */
 }
-/*
-.ethnic_item4 {
-  background-size: cover;
-  background-position: center center;
-  background-color: gray;
-  border-radius: 20%;
-} */
-
-/* body {
-  font-family: Noto Sans, Arial, sans-serif;
-  padding: 3em 0;
-  margin: 0;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-          justify-content: center;
-} */
 
 SquareGrid {
   --content-width: 15vw;
@@ -621,7 +557,6 @@ SquareGrid {
   margin-left: -25%;
 
 }
-
 
 .second_grid{
   /* display: inline-block; */
@@ -708,17 +643,6 @@ SquareGrid {
   padding: 0.7em 0;
 }
 
-.container{
-  /* padding: 1em 0; */
-  /* float: left; */
-  /* width: 50%; */
-}
-/* @media screen and (max-width: 640px){
-  .container{
-    display: block;
-    width: 100%;
-  }
-} */
 
 @media screen and (min-width: 900px){
   .container{
@@ -742,46 +666,32 @@ SquareGrid {
 
 .content {
   position: relative;
-  /* width: 100%; */
-  /* max-width: 400px; */
-  /* margin: auto; */
-  /* overflow: hidden; */
 }
 
 .content2 {
   position: relative;
-  /* width: 100%; */
-  /* max-width: 400px; */
-  /* margin: auto; */
-  /* overflow: hidden; */
 }
 
 .content .content-overlay {
   background: rgba(255,255,255, 0.5);
   position: absolute;
-  /* height: 99%; */
   width: 100%;
   left: 0;
   top: 0;
   bottom: 0;
   right: 0;
   opacity: 0;
-  /* -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s; */
   transition: all 0.4s ease-in-out 0s;
 }
 .content2 .content-overlay {
   background: rgba(255,255,255, 0.5);
   position: absolute;
-  /* height: 99%; */
   width: 100%;
   left: 0;
   top: 0;
   bottom: 0;
   right: 0;
   opacity: 0;
-  /* -webkit-transition: all 0.4s ease-in-out 0s;
-  -moz-transition: all 0.4s ease-in-out 0s; */
   transition: all 0.4s ease-in-out 0s;
 }
 
@@ -792,41 +702,26 @@ SquareGrid {
   opacity: 1;
 }
 
-.content-image{
-  /* width: 150%; */
-}
-
 .content-details {
   position: absolute;
-  /* text-align: center; */
-  /* padding-left: -5em; */
-  /* padding-right: 1em; */
   width: 100%;
   top: 50%;
   left: -50%;
-  margin-left: 140%;
+  margin-left: 150%;
   margin-top: 18%;
   opacity: 0;
   transform: translate(-50%, -50%);
-  /* -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s; */
   transition: all 0.3s ease-in-out 0s;
 }
 
 .content-details2 {
   position: absolute;
-  /* text-align: center; */
-  /* padding-left: -5em; */
-  /* padding-right: 1em; */
   width: 100%;
   top: 50%;
   left: -50%;
-  margin-left: 25%;
-  margin-top: 15%;
+  margin-left: 20%;
   opacity: 0;
   transform: translate(-50%, -50%);
-  /* -webkit-transition: all 0.3s ease-in-out 0s;
-  -moz-transition: all 0.3s ease-in-out 0s; */
   transition: all 0.3s ease-in-out 0s;
 }
 
@@ -860,10 +755,8 @@ SquareGrid {
   color: black;
   font-weight: 500;
   letter-spacing: 0.15em;
-
   margin-bottom: 0.5em;
   text-transform: uppercase;
-  /* margin-top: -15%; */
 }
 
 .content-details2 p{
@@ -897,8 +790,6 @@ SquareGrid {
 }
 
 .us_chile_title{
-  /* text-align: left; */
-  /* padding-left: 5%; */
   margin-top: 20%;
 }
 
@@ -949,6 +840,7 @@ SquareGrid {
 .nav-toggle{
   background-color: #eee;
   border: none;
+  /* border-style: solid; */
   color: black;
   padding: 15px;
   margin-left: 60px;
@@ -956,6 +848,7 @@ SquareGrid {
   text-decoration: none;
   display:flex;
   font-size: 16px;
+  letter-spacing: 2px;
 
   }
   .nav-toggle:hover{
@@ -964,23 +857,58 @@ SquareGrid {
     box-shadow: .1em .1em 3em rgba(100,100,100, 0.2);
 }
 
+
+
+
+
+
 /* exports */
 .export_label{
-  position: absolute;
-  margin-top: -53%;
-  margin-left: 80%;
+  /* position: absolute; */
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  right:0px;
+  height:50px;
+  margin-bottom:0px;
+  display: inline;
+  float: left;
+  margin-top: 5%;
+  z-index: 99999;
+  background-color: #eee;
+  padding: 2%;
+  padding-top: 4%;
+  /* margin-left: -2%; */
+  width: 100%;
+  font-size: 1.2em;
+  }
+  #export_label:hover,
+  #export_label:focus {
+  box-shadow: inset 0 0 0 2em var(--hover);
+}
 
+  #export_label {
+    --color: #a972cb;
+    --hover: #bbd147;
+  }
+
+  .nav-toggle{
+    transition: 0.35s;
   }
   #copper{
+    margin-left: 5%;
     color: #ED1C24;
   }
   #refined{
+      margin-left: 5%;
     color: #92278F;
   }
   #fillet{
+      margin-left: 5%;
     color: #FBB040;
   }
   #sulfate{
+      margin-left: 5%;
     color: #603A16;
   }
   #export_label{
@@ -999,21 +927,47 @@ SquareGrid {
 
 /* imports */
 .import_label{
-  position: absolute;
-  margin-top: -5%;
-  margin-left: 13%;
-  text-align: right;
+  /* position: absolute; */
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  right:0px;
+  height:50px;
+  margin-bottom:0px;
+  display: inline;
+  float: left;
+  margin-top: 5%;
+  z-index: 99999;
+  background-color: #eee;
+  padding: 2%;
+  padding-top: 4%;
+  /* margin-left: -2%; */
+  width: 100%;
+  font-size: 1.2em;
+  }
+  #import_label:hover,
+  #import_label:focus {
+  box-shadow: inset 0 0 0 2em var(--hover);
+}
+
+  #import_label {
+    --color: #a972cb;
+    --hover: #bbd147;
   }
   #cars{
+    margin-left: 5%;
     color: #27AAE1;
   }
   #Petroleum{
+    margin-left: 5%;
     color: #D7DF23;
   }
   #Crude{
+    margin-left: 5%;
     color: #2E3192;
   }
   #Broadcasting{
+    margin-left: 5%;
     color: #009444;
   }
   #import_label{
@@ -1262,17 +1216,12 @@ ul li {
 
 
 .image-grid {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-direction: row;
+  flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
-  -webkit-box-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   max-width: 80%;
   height: 100%;
   margin: 0 auto;
@@ -1281,27 +1230,18 @@ ul li {
 }
 
 .image-grid__item {
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-flex: 0;
-          flex-grow: 0;
+  flex-direction: column;
+  flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 360px;
-  -webkit-box-align: stretch;
-          align-items: stretch;
-  -webkit-box-pack: center;
-          justify-content: center;
+  align-items: stretch;
+  justify-content: center;
   position: relative;
   height: 220px;
   margin-right: 14px;
   margin-bottom: 14px;
-  -webkit-transition: text-shadow 0.1s ease-in, -webkit-transform 0.14s ease-in;
-  transition: text-shadow 0.1s ease-in, -webkit-transform 0.14s ease-in;
   transition: transform 0.14s ease-in, text-shadow 0.1s ease-in;
-  transition: transform 0.14s ease-in, text-shadow 0.1s ease-in, -webkit-transform 0.14s ease-in;
 }
 .image-grid__item:before {
   content: "";
@@ -1314,7 +1254,6 @@ ul li {
   background: none;
   border-radius: 3px;
   box-shadow: 0 10px 24px 0px rgba(0, 0, 0, 0.06), 0 8px 20px -2px rgba(0, 0, 0, 0.1), 0 6px 10px -6px rgba(0, 0, 0, 0.2);
-  -webkit-transition: visibility 0.1s ease-out, opacity 0.1s ease-out;
   transition: visibility 0.1s ease-out, opacity 0.1s ease-out;
   opacity: 0;
 }
@@ -1327,23 +1266,17 @@ ul li {
   display: -webkit-box;
   display: flex;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-direction: column;
+  flex-grow: 1;
   flex-shrink: 1;
-  -webkit-box-align: stretch;
-          align-items: stretch;
-  -webkit-box-pack: center;
-          justify-content: center;
+  align-items: stretch;
+  justify-content: center;
   text-decoration: none;
   color: #eeeeee;
   overflow: hidden;
 }
 .grid-item:hover .grid-item__image {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 .grid-item:hover .grid-item__hover {
   visibility: visible;
@@ -1351,8 +1284,7 @@ ul li {
 }
 .grid-item:hover .grid-item__name {
   visibility: visible;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
   opacity: 1;
 }
 
@@ -1364,13 +1296,10 @@ ul li {
   bottom: 0;
   background-size: cover;
   background-position: center center;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
   will-change: transform;
-  -webkit-transition: -webkit-transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: -webkit-transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94), -webkit-transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: transform 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94),
   z-index: 0;
 }
 
@@ -1385,36 +1314,24 @@ ul li {
   background: radial-gradient(rgba(47, 48, 50, 0.2), rgba(47, 48, 50, 0.7));
   box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.15);
   border-radius: 0;
-  -webkit-transition: visibility 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: visibility 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity 0.35s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   opacity: 0;
 }
 
 .grid-item__name {
   visibility: hidden;
-  display: -webkit-box;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -webkit-box-flex: 1;
-          flex-grow: 1;
+  flex-direction: column;
+  flex-grow: 1;
   flex-shrink: 1;
-  -webkit-box-align: center;
-          align-items: center;
+  align-items: center;
   font-size: 2rem;
   font-weight: 300;
   text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4), 2px 2px 6px rgba(0, 0, 0, 0.3);
-  -webkit-box-pack: center;
-          justify-content: center;
+  justify-content: center;
   letter-spacing: 1px;
-  -webkit-transform: scale(0.6);
-          transform: scale(0.6);
-  -webkit-transform-origin: center center;
-          transform-origin: center center;
-  -webkit-transition: visibility 0.14s ease-out, opacity 0.14s ease-out, -webkit-transform 0.24s ease;
-  transition: visibility 0.14s ease-out, opacity 0.14s ease-out, -webkit-transform 0.24s ease;
+  transform: scale(0.6);
+  transform-origin: center center;
   transition: visibility 0.14s ease-out, opacity 0.14s ease-out, transform 0.24s ease;
-  transition: visibility 0.14s ease-out, opacity 0.14s ease-out, transform 0.24s ease, -webkit-transform 0.24s ease;
   opacity: 0;
 }
