--- a/assets/style.css
+++ b/assets/style.css
@@ -878,7 +878,7 @@ SquareGrid {
   background-color: #eee;
   padding: 2%;
   padding-top: 4%;
-  /* margin-left: -2%; */
+  margin-left: -2%;
   width: 100%;
   font-size: 1.2em;
   }
@@ -941,7 +941,7 @@ SquareGrid {
   background-color: #eee;
   padding: 2%;
   padding-top: 4%;
-  /* margin-left: -2%; */
+  margin-left: -2%;
   width: 100%;
   font-size: 1.2em;
   }
